# contest

./: .gitignore  .tcjson  CHelperReport.txt  CheckerClass.template  InteractorClass.template  README.md  TestCaseClass.template  TopCoderTestCaseClass.template  chelper.properties  input.txt  main  main.cpp  opensource  output.txt  pom.xml
c++/: CMakeLists.txt  input  main.bak  main.cpp  submission.template  task.template
c++/output/: main.cpp
c++/study/header file/: MyHeader.h  MySource.cpp  main.cpp
c++/study/virtual function/: main.cpp  output
c++/tasks/: GRecursiveQueries.cpp  LUOGU4719.cpp  Test.cpp  arc067_d.cpp
c++/template/: min_cost_max_flow.cpp  modular.cpp
c++/testrunner/: main.cpp
cpp/: CMakeLists.txt  cptool.yaml  main.cpp  submission.template  task.template
cpp/archive/: Codeforces1042F.cpp  Codeforces1080F.cpp
cpp/geany/: in  main  main.cpp
cpp/libs/: acautomaton.h  big_int.h  bigint.h  binary_index_tree.h  binary_search.h  bit.h  bits.h  cht.h  common.h  compiler_macro.h  (+59 more)
output/: AddPeriodic.java  AllInclusiveString.java  AqaAsadiSaves.java  AqaAsadiTrains.java  BoxTower.java  CoverTreePaths.java  EllysIncinerator.java  FloodFill.java  Literature.java  LongPalindromes.java  Main.java  MatchNim.java  MaxCutFree.java  ModCounters.java  MoreSquares.java  NewBanknote.java  PBG.java  ProposalOptimization.java  Rectoggle.java  RochesterSequence.java  Solution.java  SpanningSubgraphs.java  SteelMill.java  ThreeColorTrees.java  TieForMax.java  TokenDoublingGame.java  local_testing_tool.py  run.bat  test.in  test.out
standard/: main.cpp
(+16569 files in other folders)
